Fix too large video tag

--- a/public/style.css
+++ b/public/style.css
@@ -45,3 +45,7 @@ nav .nav.nav-list {
     width: 90%;
     height: 90%;
 }
+
+.videoPlayer video {
+    max-height: 100%;
+}
